docs(rfc): probe says the wrapper adds nothing — recommendation becomes withdrawal
The RFC asked which line ExerisStructuredScope should ship on. That presumes the
wrapper does something. Probed instead of assumed:

    [PROBE] raw STS fork         — RequestScope bound? true  (tenantId matches)
    [PROBE] plain virtual thread — RequestScope bound? false

StructuredTaskScope already propagates the binding. The wrapper's callWith rebinds a
value STS has already carried, and it is redundant in every reachable case: open()
captures at open, the wrapper captures at construction, same static factory call,
same thread. So the §4 invariant we cite as ours is the JDK's, and
tenantIdPropagatesAcrossForks passes against the JDK.

What is left is three factory aliases over Joiner and roughly three allocations per
fork — two lambdas plus a ScopedValue carrier — spent on that no-op. ADR-029's stated
rationale, shielding callers from JDK preview-API iteration, is not achieved either:
fork() returns the JDK's Subtask and the factory names mirror Joiner semantics, so
churn passes straight through and the wrapper moves again on JDK 28.

Second measurement: remove the class, drop --enable-preview from the compiler args,
build. The reactor compiles clean and carries zero preview-pinned classes. One class
stands between this repository and a preview-clean build, and its only semantic
content is a no-op.

Adds Option D (withdraw the class) and makes it the recommendation. Option A was the
right answer to the wrong question — it keeps a class whose only content is naming,
and pays a per-line source exclusion that ADR-028 obligation 1 forbids. With the class
gone, both lines build preview-clean from one source tree.

Two previously recorded risks are retired explicitly rather than deleted, since both
were consequences of keeping the class on one line: the source exclusion, and
ADR-067's gate mis-reporting an intended divergence. The gate should in fact be
extended to the JDK axis, since o